syntax = "proto3";

package A;

// Interface exported by the server.
service A {
    rpc CallA(Req) returns (Empty) {}
    rpc CallB(Req) returns (Empty) {}
    rpc CallC(Req) returns (Empty) {}
}

// Empty msg
message Empty {}

// Request
message Req {
    string  Name = 1;
}





